--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Music App UI</title>
+  <title>Music App Perséfone</title>
   <!-- React CDN -->
   <script crossorigin src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
   <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
@@ -300,8 +300,8 @@
                 className="w-16 h-16 rounded-full"
               />
               <div>
-                <h1 className="text-2xl font-bold">Lofi Radio</h1>
-                <p className="text-sm text-neutral-400">@lofi-beats</p>
+                <h1 className="text-2xl font-bold">Luna Music</h1>
+                <p className="text-sm text-neutral-400">@luna-music</p>
               </div>
             </div>
             <FollowButton isFollowing={isFollowing} onToggleFollow={handleToggleFollow} />
